# mytorch_cpp

./: .clang-format  CMakeLists.txt  README.md  main.cpp
include/mytorch/: dataset.hpp  layers.hpp  module.hpp  optimizer.hpp  tensor.hpp  trainer.hpp
lib/mytorch/: layers.cpp  module.cpp
src/: main.cpp
